Fix Sonar maintainability issues